--- a/sections/navbar/Navbar.module.css
+++ b/sections/navbar/Navbar.module.css
@@ -23,7 +23,8 @@
 } */
 @import url("https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@700&display=swap");
 .header {
-  width: 100%;
+  max-width: 100%;
+  overflow-x: hidden;
   height: 80px;
   /* background-image: url("/images/datingNew/background.png"); */
   /* background-color: aqua; */
